# flow-maps

./: README.md  pyproject.toml
flow_map/: common.py  trainer.py
flow_map/mlx_python/data/: checkerboard.py
flow_map/mlx_python/models/: mlp.py
flow_map/notes/: baseline_fm
flow_map/pytorch/checkerboard/: data.py  emd.py  flow_base.py  flow_model.py  lmd.py  lsd.py  model.py
flow_map/pytorch/cifar/: __init__.py  data.py  model.py  train.py
flow_map/pytorch/cifar10/: data.py  train.py  unet.py
flow_map/pytorch/data/: __init__.py  checkerboard.py
flow_map/pytorch/models/: mlp.py
flow_map/pytorch/speech_commands/: data.py
flow_map/pytorch/trainer/: emd.py  flow_base.py  lmd.py  lsd.py
flow_map/scratchpad/: jacobians.py  randn.py
